# stalkreporter-py

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  azure-pipelines.yml  pip-freeze.txt  setup.cfg  setup.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: proto.html
junit/: test-results.xml
protogen/stalk_proto/: forecaster_grpc.py  forecaster_pb2.py  models_grpc.py  models_pb2.py  models_pb2.pyi  reporter_grpc.py  reporter_pb2.py  reporter_pb2.pyi
protogen/stalk_proto/google/api/: annotations_grpc.py  annotations_pb2.py  annotations_pb2.pyi  http_grpc.py  http_pb2.py  http_pb2.pyi  httpbody_grpc.py  httpbody_pb2.py  httpbody_pb2.pyi
stalk_proto/: README.md  forecaster.proto  models.proto  reporter.proto
stalk_proto/google/api/: annotations.proto
stalkreporter/: __main__.py  colors.py  utils.py
stalkreporter/forecast_chart/: __init__.py  _chart_forecast.py  _consts.py  _options.py  _plot_pattern_chances.py  _plot_periods.py  _plot_prices_range.py
stalkreporter/server/: __init__.py  server.py
stalkreports/: __main__.py  _make_prediction_chart.py
stalkreports/forecast_chart/: __init__.py  _chart_forecast.py  _plot_pattern_chances.py  _plot_periods.py  _plot_prices_range.py
stalkreports/server/: server.py
zdevelop/make_scripts/: make_proto.py
zdevelop/tests/: conftest.py  test_service.py
zdocs/source/: conf.py  index.rst
zdocs/source/_static/: proto.html
